package com.heima.designpatterns.principles.substitiution.after;


/**
 * 四边形接口
 */
public interface Quadrilateral {

    /**
     * 获取长
     * @return
     */
    double getLength();

    /**
     * 获取宽
     * @return
     */
    double getWidth();
}
