@startuml
'https://plantuml.com/class-diagram
interface Quadrilateral {
    + getLength(): double
    + getWidth(): double
}
class RectangleDemo {
    + resize(Rectangle rectangle): void
    + printLengthAndWidth(Quadrilateral quad): void
}
class Square {
    - side: double
    + getLength(): double
    + getWidth(): double
    + setSide(double side): void
    + getSide(): void
}
class Rectangle {
    - length: double
    - width: double
    + getLength(): double
    + getWidth(): double
    + setLength(double length)
    + setWidth(double width)
}

Quadrilateral <.right. RectangleDemo: dependency
Quadrilateral <|.. Square: realization
Quadrilateral <|.. Rectangle: realization
RectangleDemo ..> Rectangle: dependency


@enduml